add dev ops and update account

--- a/config/app-config-sample3.json
+++ b/config/app-config-sample3.json
@@ -2,7 +2,7 @@
     "Project": {
         "Name": "Pipeline",
         "Stage": "Sample3",
-        "Account": "75157*******",
+        "Account": "981110247318",
         "Region": "us-east-2",
         "Profile": "cdk-demo"
     },
