--- a/config/app-config-sample3-prod.json
+++ b/config/app-config-sample3-prod.json
@@ -2,8 +2,8 @@
     "Project": {
         "Name": "HelloWorld",
         "Stage": "Prod",
-        "Account": "75157*******",
-        "Region": "ap-northeast-2",
+        "Account": "981110247318",
+        "Region": "us-east-2",
         "Profile": "cdk-demo"
     },
 
