--- a/config/app-config-sample3-prod.json
+++ b/config/app-config-sample3-prod.json
@@ -1,7 +1,7 @@
 {
     "Project": {
-        "Name": "HelloWorld",
-        "Stage": "Prod",
+        "Name": "ChainDataPuller-Hub-DymensionLocaltestnet",
+        "Stage": "PROD",
         "Account": "981110247318",
         "Region": "us-east-2",
         "Profile": "cdk-demo"
@@ -9,7 +9,7 @@
 
     "Stack": {
         "Sample3Service1": {
-            "Name": "Sample3Service1Stack"
+            "Name": "Service"
         }
     }
 }
