--- a/config/app-config-sample3-prod.json
+++ b/config/app-config-sample3-prod.json
@@ -9,7 +9,7 @@
 
     "Stack": {
         "Sample3Service1": {
-            "Name": "Service"
+            "Name": "ServiceStack"
         }
     }
 }
