Fix ecs role name

--- a/config/app-config-sample3.json
+++ b/config/app-config-sample3.json
@@ -9,7 +9,7 @@
 
     "Stack": {
         "Sample3Pipeline": {
-            "Name": "InfraStack"
+            "Name": "InfrastructureStack"
         }
     }
 }
